--- a/Hoofdstuk_3/Queries_Uitleg.ipynb
+++ b/Hoofdstuk_3/Queries_Uitleg.ipynb
@@ -62,10 +62,37 @@
     "**3. Tel het aantal stemmen per jaar op een efficiënte manier. Wat is het nadeel hier? Kunnen we dit aanraden?**\n",
     "\n",
     "```sql\n",
-    "select year(CreationDate), count(ViewCount) from Posts group by year(CreationDate)\n",
+    "select year(p.CreationDate) as year_of_post, count(v.id) as number_of_posts\n",
+    "from Posts p \n",
+    "join Votes v on p.Id = v.Id\n",
+    "group by year(p.CreationDate)\n",
+    "order by year(p.CreationDate)\n",
     "```\n",
     "\n",
-    "We hebben hier een heel lang execution plan. Dit omdat we gebruik maken van een "
+    "*We hebben hier een heel lang execution plan. Dit omdat we gebruik maken van een geaggregeerde functie. We kunnen dit oplossen door een indexed view aan te maken van de gegevens.*\n",
+    "\n",
+    "3.1. *Maak eerste de materialized view:*\n",
+    "\n",
+    "```sql\n",
+    "-- eenmalig uitvoeren\n",
+    "create or alter view dbo.posts_per_year(creationyear, number_of_posts)\n",
+    "with schemabinding as\n",
+    "    select year(p.CreationDate) as year_of_post, count_big(v.id) as number_of_posts\n",
+    "    from dbo.Posts p \n",
+    "    join dbo.Votes v on p.Id = v.Id\n",
+    "    group by year(p.CreationDate)\n",
+    "\n",
+    "-- dit achteraf uitvoeren om het te testen\n",
+    "select * from posts_per_year\n",
+    "```\n",
+    "\n",
+    "\n",
+    "3.2. *Na het maken van de view moeten we een clustered index maken. Zonder de clustered index gaan we nog geen sneller systeem hebben. Als het nu sneller gaat, dan komt dit omdat het query execution plan gecached is. De clusterd index zal voor een aanzienlijk sneller systeem zorgen.*\n",
+    "\n",
+    "```sql\n",
+    "create clustered index ci_post_per_year\n",
+    "on CreationDate\n",
+    "```"
    ]
   },
   {
@@ -75,6 +102,44 @@
     "**4. De index wordt niet gebruikt wanneer het geïndexeerde veld in een functie wordt gebruikt, zoals bijvoorbeeld ```YEAR(creationdate)```. Sommige systemen voorzien function-based indexes om hiermee om te kunnen gaan. Wat kunnen we doen om dit te omzeilen?**\n",
     "\n",
     "*Zoals hierboven gezegd, maak een nieuwe kolom aan dat gebaseerd is op een berekening met een functie.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**X - Materialized view of indexed views**\n",
+    "\n",
+    "* Data vasthouden als een tabel. De berekeningen neem je weg van de query runtime. Een heel complexe view met heel complexe aggregaties (count, sum, etc.). Je houdt de resultaten van een select-statement bij.\n",
+    "\n",
+    "* Je voegt er een primary key aan toe.\n",
+    "\n",
+    "* Een view wordt aangemaakt en opgeslaan als object, maar de inhoud wordt niet opgeslaan! Enkel het select-statement wordt opgeslaan.\n",
+    "\n",
+    "* Virtuele tabel --> 'echte data' opgeslaan in een tabel."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**X - Schema**\n",
+    "\n",
+    "* Container met alle objecten van een databank.\n",
+    "\n",
+    "* Het schema moet gebonden zijn aan de tabellen in een view. De binding zorgt voor het verwijzen naar de verschillende tabellen.\n",
+    "\n",
+    "*  Als je een tabel binnen een view gaat verwijderen of aanpassen, dan wordt de view onbeschikbaar.\n",
+    "\n",
+    "```sql\n",
+    "create view ... \n",
+    "with schemabinding\n",
+    "as select ... from ...\n",
+    "join by ... on .. = ..\n",
+    "group by ..\n",
+    "```\n",
+    "\n",
+    "* Hierna ga je een clustered index uitvoeren op de view. "
    ]
   },
   {
@@ -91,14 +156,19 @@
     "group by u.Id, u.DisplayName\n",
     "```\n",
     "\n",
-    "Hier volg je best hetzelfde principe. Je slaat het aantal badges op per gebruiker."
+    "Hier volg je best hetzelfde principe. Je slaat het aantal badges op per gebruiker.\n",
+    "\n",
+    "\n",
+    "```sql\n",
+    "\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "test"
+    "**6. "
    ]
   }
  ],
